# plus-trade

./: .env.example  .gitignore  README.md  pyproject.toml
configs/backtests/: example.yaml
configs/universes/: us-core.yaml
docs/: architecture.md  operations.md  strategy-development.md
docs/superpowers/specs/: 2026-07-16-discord-portfolio-bot-design.md
src/plus_trade/: __init__.py  cli.py  config.py  fx.py  kis_client.py  market.py  messaging.py  paths.py  runner.py  state.py
src/plus_trade/backtest/: cli.py  costs.py  data.py  engine.py  fills.py  metrics.py  models.py  regime.py  resample.py  walk_forward.py
src/plus_trade/backtest/strategies/: __init__.py  example.py
tests/: test_backtest_engine.py
tests/backtest/: test_cli.py  test_costs.py  test_fills.py  test_metrics.py  test_resample.py  test_walk_forward.py
