[project]
name = "plus-trade"
version = "0.1.0"
description = "CLI skeleton for a Korea Investment & Securities based auto-trading service"
readme = "README.md"
authors = [
    { name = "Jihyuk Lee", email = "withJihyuk@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pandas-market-calendars>=5.4.0",
    "pyarrow>=24.0.0",
    "pydantic-settings>=2.14.1",
    "python-kis>=2.1.6",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
plus-trade = "plus_trade.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
